update delete function tables

--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout1.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout1.html
@@ -44,64 +44,6 @@
 	</head>
 
 	<body>
-		<div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel"
-		aria-hidden="true">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title" id="exampleModalLabel">
-						취소
-					</h5>
-					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-				</div>
-				<div class="modal-body">취소하시겠습니까?</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-primary">
-						예
-					</button>
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-						아니요
-					</button>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-		<div class="modal-dialog">
-
-			<div class="modal-content">
-				<div class="modal-header">
-				<h1 class="modal-title fs-5" id="exampleModalLabel">데이터 추가</h1>
-				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-			</div>
-
-			<div class="modal-body">
-				추가하시겠습니까?
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-primary">추가</button>
-				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
-			</div>
-
-			</div>
-
-	</div>
-
-	</div>
-		<!-- Loading wrapper start -->
-		<!-- <div id="loading-wrapper">
-			<div class="spinner">
-                <div class="line1"></div>
-				<div class="line2"></div>
-				<div class="line3"></div>
-				<div class="line4"></div>
-				<div class="line5"></div>
-				<div class="line6"></div>
-            </div>
-		</div> -->
-		<!-- Loading wrapper end -->
-
 		<!-- Page wrapper start -->
 		<div class="page-wrapper">
 
@@ -493,7 +435,7 @@
 								<div class="dropdown-menu dropdown-menu-end shadow">
 									<div class="dropdown-item">
 										<div class="d-flex py-2 border-bottom">
-											<img src="assets/images/user.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
+											<img src="ddm/templates/max/design/assets/images/user.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
 											<div class="m-0">
 												<h6 class="mb-1">Sophie Michiels</h6>
 												<p class="mb-2">Membership has been ended.</p>
@@ -503,7 +445,7 @@
 									</div>
 									<div class="dropdown-item">
 										<div class="d-flex py-2 border-bottom">
-											<img src="assets/images/user2.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
+											<img src="ddm/templates/max/design/assets/images/user2.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
 											<div class="m-0">
 												<h6 class="mb-1">Sophie Michiels</h6>
 												<p class="mb-2">Congratulate, James for new job.</p>
@@ -513,7 +455,7 @@
 									</div>
 									<div class="dropdown-item">
 										<div class="d-flex py-2">
-											<img src="assets/images/user3.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
+											<img src="ddm/templates/max/design/assets/images/user3.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
 											<div class="m-0">
 												<h6 class="mb-1">Sophie Michiels</h6>
 												<p class="mb-2">Lewis added new schedule release.</p>
@@ -527,24 +469,24 @@
 
 							<li class="dropdown d-none d-md-block">
 								<a href="#" id="countries" data-toggle="dropdown" aria-haspopup="true">
-									<img src="assets/images/flags/1x1/gb.svg" class="flag-img" alt="AI Admin Dashboards" />
+									<img src="ddm/templates/max/design/assets/images/flags/1x1/gb.svg" class="flag-img" alt="AI Admin Dashboards" />
 								</a>
 								<div class="dropdown-menu dropdown-menu-end mini" aria-labelledby="countries">
 									<div class="country-container">
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/us.svg" alt="Clean Admin Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/us.svg" alt="Clean Admin Dashboards" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/in.svg" alt="Google Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/in.svg" alt="Google Dashboards" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/br.svg" alt="Admin Panels" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/br.svg" alt="Admin Panels" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/tr.svg" alt="Modern Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/tr.svg" alt="Modern Dashboards" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/ca.svg" alt="Best Admin Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/ca.svg" alt="Best Admin Dashboards" />
 										</a>
 									</div>
 								</div>
@@ -553,7 +495,7 @@
 								<a href="#" id="userSettings" class="user-settings" data-toggle="dropdown" aria-haspopup="true">
 									<span class="user-name d-none d-md-block">Tony Robbins</span>
 									<span class="avatar">
-										<img src="assets/images/user3.png" alt="Admin Templates">
+										<img src="ddm/templates/max/design/assets/images/user3.png" alt="Admin Templates">
 										<span class="status busy"></span>
 									</span>
 								</a>
@@ -590,24 +532,27 @@
 										<div class="card-title">Form Layout</div>
 									</div>
 									<div class="card-body">
+											<form action = "codeGroupInsert" method="post">
 
 										<!-- Row start -->
 										<div class="row gx-3">
 											<div class="col-sm-6 col-12">
 												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">이름</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required="">
+													<label for="validationCustom01" class="form-label">seq</label>
+													<input type="text" class="form-control" id="validationCustom01" value="" required=""
+													name = "seq">
 												</div>
 											</div>
 											<div class="col-sm-6 col-12">
 												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">이메일</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required="">
+													<label for="validationCustom01" class="form-label">name</label>
+													<input type="text" class="form-control" id="validationCustom01" value="" required=""
+													name = "name">
 												</div>
 											</div>
 											
 										</div>
-										<div class = "row gx-3">
+										<!--<div class = "row gx-3">
 											<div class="col-sm-6 col-12">
 												<div class="was-validated">
 													<label for="validationCustom01" class="form-label">전화번호</label>
@@ -681,16 +626,18 @@
 												</div>
 											</div>
 										</div>
-										<!-- Row end -->
-
+										 Row end 
+-->
 										<!-- Form actions footer start -->
 										<div class="form-actions-footer">
-											<button class="btn btn-light" data-bs-toggle="modal"
-											data-bs-target="#exampleModal1">Cancel</button>
-											<button class="btn btn-success" data-bs-toggle="modal"
-											data-bs-target="#exampleModal2">Submit</button>
+												<button class="btn btn-light" data-bs-toggle="modal"
+												data-bs-target="#exampleModal1 ">Cancel</button>
+												<button class="btn btn-success submit" data-bs-toggle="modal"
+												data-bs-target="#exampleModal2 ">Submit</button>
+											
 										</div>
 										<!-- Form actions footer end -->
+										</form>
 
 									</div>
 								</div>
