upload update list seq and updtdel

--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout1.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout1.html
@@ -631,9 +631,9 @@
 										<!-- Form actions footer start -->
 										<div class="form-actions-footer">
 												<button class="btn btn-light" data-bs-toggle="modal"
-												data-bs-target="#exampleModal1 ">Cancel</button>
+												data-bs-target="#exampleModal1 ">취소</button>
 												<button class="btn btn-success submit" data-bs-toggle="modal"
-												data-bs-target="#exampleModal2 ">Submit</button>
+												data-bs-target="#exampleModal2 ">데이터추가</button>
 											
 										</div>
 										<!-- Form actions footer end -->
