--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout2.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout2.html
@@ -15,7 +15,7 @@
 		<meta property="og:description" content="Marketplace for Bootstrap Admin Dashboards">
 		<meta property="og:type" content="Website">
 		<meta property="og:site_name" content="Bootstrap Gallery">
-		<link rel="shortcut icon" href="assets/images/favicon.svg">
+		<link rel="shortcut icon" href="ddm/templates/max/design/assets/images/favicon.svg">
 
 		<!-- Title -->
 		<title>Best Admin Dashboards</title>
@@ -25,13 +25,13 @@
 		************ -->
 
 		<!-- Animated css -->
-		<link rel="stylesheet" href="assets/css/animate.css">
+		<link rel="stylesheet" href="ddm/templates/max/design/assets/css/animate.css">
 
 		<!-- Bootstrap font icons css -->
-		<link rel="stylesheet" href="assets/fonts/bootstrap/bootstrap-icons.css">
+		<link rel="stylesheet" href="ddm/templates/max/design/assets/fonts/bootstrap/bootstrap-icons.css">
 
 		<!-- Main css -->
-		<link rel="stylesheet" href="assets/css/main.min.css">
+		<link rel="stylesheet" href="ddm/templates/max/design/assets/css/main.min.css">
 
 
 		<!-- *************
@@ -39,25 +39,11 @@
 		************ -->
 
 		<!-- Scrollbar CSS -->
-		<link rel="stylesheet" href="assets/vendor/overlay-scroll/OverlayScrollbars.min.css">
+		<link rel="stylesheet" href="ddm/templates/max/design/assets/vendor/overlay-scroll/OverlayScrollbars.min.css">
 
 	</head>
 
 	<body>
-
-		<!-- Loading wrapper start -->
-		<!-- <div id="loading-wrapper">
-			<div class="spinner">
-                <div class="line1"></div>
-				<div class="line2"></div>
-				<div class="line3"></div>
-				<div class="line4"></div>
-				<div class="line5"></div>
-				<div class="line6"></div>
-            </div>
-		</div> -->
-		<!-- Loading wrapper end -->
-
 		<!-- Page wrapper start -->
 		<div class="page-wrapper">
 
@@ -285,10 +271,10 @@
 											<a href="summernote.html">Summernote</a>
 										</li>
 										<li>
-											<a href="form-layout1.html">Form Layout</a>
+											<a href="form-layout1.html" class="current-page">Form Layout</a>
 										</li>
 										<li>
-											<a href="form-layout2.html" class="current-page">Form Layout 2</a>
+											<a href="form-layout2.html">Form Layout 2</a>
 										</li>
 										<li>
 											<a href="form-layout3.html">Form Layout 3</a>
@@ -449,7 +435,7 @@
 								<div class="dropdown-menu dropdown-menu-end shadow">
 									<div class="dropdown-item">
 										<div class="d-flex py-2 border-bottom">
-											<img src="assets/images/user.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
+											<img src="ddm/templates/max/design/assets/images/user.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
 											<div class="m-0">
 												<h6 class="mb-1">Sophie Michiels</h6>
 												<p class="mb-2">Membership has been ended.</p>
@@ -459,7 +445,7 @@
 									</div>
 									<div class="dropdown-item">
 										<div class="d-flex py-2 border-bottom">
-											<img src="assets/images/user2.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
+											<img src="ddm/templates/max/design/assets/images/user2.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
 											<div class="m-0">
 												<h6 class="mb-1">Sophie Michiels</h6>
 												<p class="mb-2">Congratulate, James for new job.</p>
@@ -469,7 +455,7 @@
 									</div>
 									<div class="dropdown-item">
 										<div class="d-flex py-2">
-											<img src="assets/images/user3.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
+											<img src="ddm/templates/max/design/assets/images/user3.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
 											<div class="m-0">
 												<h6 class="mb-1">Sophie Michiels</h6>
 												<p class="mb-2">Lewis added new schedule release.</p>
@@ -483,24 +469,24 @@
 
 							<li class="dropdown d-none d-md-block">
 								<a href="#" id="countries" data-toggle="dropdown" aria-haspopup="true">
-									<img src="assets/images/flags/1x1/gb.svg" class="flag-img" alt="AI Admin Dashboards" />
+									<img src="ddm/templates/max/design/assets/images/flags/1x1/gb.svg" class="flag-img" alt="AI Admin Dashboards" />
 								</a>
 								<div class="dropdown-menu dropdown-menu-end mini" aria-labelledby="countries">
 									<div class="country-container">
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/us.svg" alt="Clean Admin Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/us.svg" alt="Clean Admin Dashboards" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/in.svg" alt="Google Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/in.svg" alt="Google Dashboards" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/br.svg" alt="Admin Panels" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/br.svg" alt="Admin Panels" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/tr.svg" alt="Modern Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/tr.svg" alt="Modern Dashboards" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/ca.svg" alt="Best Admin Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/ca.svg" alt="Best Admin Dashboards" />
 										</a>
 									</div>
 								</div>
@@ -509,7 +495,7 @@
 								<a href="#" id="userSettings" class="user-settings" data-toggle="dropdown" aria-haspopup="true">
 									<span class="user-name d-none d-md-block">Tony Robbins</span>
 									<span class="avatar">
-										<img src="assets/images/user3.png" alt="Admin Templates">
+										<img src="ddm/templates/max/design/assets/images/user3.png" alt="Admin Templates">
 										<span class="status busy"></span>
 									</span>
 								</a>
@@ -538,7 +524,7 @@
 
 						<!-- Row start -->
 						<div class="row gx-3">
-							<div class="col-sm-6 col-12">
+							<div class="col-sm-12 col-12">
 
 								<!-- Card start -->
 								<div class="card">
@@ -546,170 +532,119 @@
 										<div class="card-title">Form Layout</div>
 									</div>
 									<div class="card-body">
+											<form action = "codeGroupUpdt" method="post">
 
 										<!-- Row start -->
 										<div class="row gx-3">
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputName" class="form-label">Name</label>
-													<input type="text" class="form-control" id="inputName" placeholder="Enter Name">
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationCustom01" class="form-label">seq</label>
+													<input type="text" class="form-control" id="validationCustom01" value="" required=""
+													name = "seq">
 												</div>
 											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputEmail" class="form-label">Email</label>
-													<input type="email" class="form-control" id="inputEmail" placeholder="Enter Email">
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationCustom01" class="form-label">name</label>
+													<input type="text" class="form-control" id="validationCustom01" value="" required=""
+													name = "name" >
 												</div>
 											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputNumber" class="form-label">Phone</label>
-													<input type="number" class="form-control" id="inputNumber" placeholder="Enter Phone Number">
+											
+										</div>
+										<!--<div class = "row gx-3">
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationCustom01" class="form-label">전화번호</label>
+													<input type="text" class="form-control" id="validationCustom01" value="" required="">
 												</div>
 											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputCompanyName" class="form-label">Company Name</label>
-													<input type="text" class="form-control" id="inputCompanyName"
-														placeholder="Enter Company Name">
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputBusinessAddress" class="form-label">Business Address</label>
-													<input type="text" class="form-control" id="inputBusinessAddress"
-														placeholder="Enter Business Address">
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputProvince" class="form-label">Province/Territory</label>
-													<input type="text" class="form-control" id="inputProvince"
-														placeholder="Enter Province/Territory">
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputIndustryType" class="form-label">Industry Type</label>
-													<select class="form-select" id="inputIndustryType">
-														<option value="Select">Industry Type</option>
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+
+													<label for="validationCustom03" class="form-label">성별</label>
+													<select class="form-select" id="validationCustom04" required="">
+														<option selected="" disabled="" value="">Choose...</option>
+														<option>남자</option>
+														<option>여자</option>
+														<option>그외</option>
 													</select>
+													<div class="invalid-feedback">Please select a valid state.</div>
+												
+
+											</div>
+										</div>
+										<div class = "row gx-3">
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationCustom03" class="form-label">나라</label>
+													<select class="form-select" id="validationCustom04" required="">
+														<option selected="" disabled="" value="">Choose...</option>
+														<option>대한민국</option>
+														<option>일본</option>
+														<option>미국</option>
+													</select>
+													<div class="invalid-feedback">Please select a valid state.</div>
+												
 												</div>
 											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputPostalCode" class="form-label">Postal Code</label>
-													<input type="text" class="form-control" id="inputPostalCode" placeholder="Enter Postal Code">
-												</div>
-											</div>
-											<div class="col-xxl-12">
-												<div class="mb-3">
-													<label for="inputMessage" class="form-label">Message</label>
-													<textarea class="form-control" id="inputMessage" placeholder="Enter Message"
-														rows="3"></textarea>
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationCustom01" class="form-label">Province/Territory</label>
+													<input type="text" class="form-control" id="validationCustom01" value="" required="">
+
 												</div>
 											</div>
 										</div>
-										<!-- Row end -->
-
+										<div class = "row gx-3">
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationCustom03" class="form-label">Industry Type</label>
+													<select class="form-select" id="validationCustom04" required="">
+														<option selected="" disabled="" value="">Choose...</option>
+														<option>...</option>
+													</select>
+													<div class="invalid-feedback">Please select a valid state.</div>
+												</div>
+											</div>
+											<div class="col-xl- col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationCustom01" class="form-label">Postal Code</label>
+													<input type="text" class="form-control" id="validationCustom01" value="" required="">
+												</div>
+											</div>
+											
+										</div>	
+											
+										</div>
+										<div>
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationTextarea" class="form-label">Message</label>
+													<textarea class="form-control is-invalid" id="validationTextarea"
+												placeholder="Required example textarea" required=""></textarea>
+												</div>
+											</div>
+										</div>
+										 Row end 
+-->
 										<!-- Form actions footer start -->
 										<div class="form-actions-footer">
-											<button class="btn btn-light">Cancel</button>
-											<button class="btn btn-success">Submit</button>
+												<button class="btn btn-light" data-bs-toggle="modal"
+												data-bs-target="#exampleModal1 ">취소</button>
+												<button class="btn btn-success submit" data-bs-toggle="modal"
+												data-bs-target="#exampleModal2 ">데이터 수정</button>
+											
 										</div>
 										<!-- Form actions footer end -->
+										</form>
 
 									</div>
 								</div>
 								<!-- Card end -->
 
 							</div>
-							<div class="col-sm-6 col-12">
 
-								<!-- Card start -->
-								<div class="card">
-									<div class="card-header">
-										<div class="card-title">Form Layout</div>
-									</div>
-									<div class="card-body">
-
-										<!-- Row start -->
-										<div class="row gx-3">
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputName2" class="form-label">Name</label>
-													<input type="text" class="form-control" id="inputName2" placeholder="Enter Name">
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputEmail2" class="form-label">Email</label>
-													<input type="email" class="form-control" id="inputEmail2" placeholder="Enter Email">
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputNumber2" class="form-label">Phone</label>
-													<input type="number" class="form-control" id="inputNumber2" placeholder="Enter Phone Number">
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputCompanyName2" class="form-label">Company Name</label>
-													<input type="text" class="form-control" id="inputCompanyName2"
-														placeholder="Enter Company Name">
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputBusinessAddress2" class="form-label">Business Address</label>
-													<input type="text" class="form-control" id="inputBusinessAddress2"
-														placeholder="Enter Business Address">
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputProvince2" class="form-label">Province/Territory</label>
-													<input type="text" class="form-control" id="inputProvince2"
-														placeholder="Enter Province/Territory">
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputIndustryType2" class="form-label">Industry Type</label>
-													<select class="form-select" id="inputIndustryType2">
-														<option value="Select">Industry Type</option>
-													</select>
-												</div>
-											</div>
-											<div class="col-xl-6 col-sm-12 col-12">
-												<div class="mb-3">
-													<label for="inputPostalCode2" class="form-label">Postal Code</label>
-													<input type="text" class="form-control" id="inputPostalCode2" placeholder="Enter Postal Code">
-												</div>
-											</div>
-											<div class="col-xxl-12">
-												<div class="mb-3">
-													<label for="inputMessage2" class="form-label">Message</label>
-													<textarea class="form-control" id="inputMessage2" placeholder="Enter Message"
-														rows="3"></textarea>
-												</div>
-											</div>
-										</div>
-										<!-- Row end -->
-
-										<!-- Form actions footer start -->
-										<div class="form-actions-footer">
-											<button class="btn btn-light">Cancel</button>
-											<button class="btn btn-success">Submit</button>
-										</div>
-										<!-- Form actions footer end -->
-
-									</div>
-								</div>
-								<!-- Card end -->
-
-							</div>
 						</div>
 						<!-- Row end -->
 
@@ -737,21 +672,21 @@
 			************ Required JavaScript Files *************
 		************* -->
 		<!-- Required jQuery first, then Bootstrap Bundle JS -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/bootstrap.bundle.min.js"></script>
-		<script src="assets/js/modernizr.js"></script>
-		<script src="assets/js/moment.js"></script>
+		<script src="ddm/templates/max/design/assets/js/jquery.min.js"></script>
+		<script src="ddm/templates/max/design/assets/js/bootstrap.bundle.min.js"></script>
+		<script src="ddm/templates/max/design/assets/js/modernizr.js"></script>
+		<script src="ddm/templates/max/design/assets/js/moment.js"></script>
 
 		<!-- *************
 			************ Vendor Js Files *************
 		************* -->
 
 		<!-- Overlay Scroll JS -->
-		<script src="assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
-		<script src="assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
+		<script src="ddm/templates/max/design/assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
+		<script src="ddm/templates/max/design/assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
 
 		<!-- Main Js Required -->
-		<script src="assets/js/main.js"></script>
+		<script src="ddm/templates/max/design/assets/js/main.js"></script>
 
 	</body>
 
