update column submit buttton add codeGroupDelete, codeGroupUpdtDel, codeGroupUpdt

--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout1.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout1.html
@@ -630,8 +630,8 @@
 -->
 										<!-- Form actions footer start -->
 										<div class="form-actions-footer">
-												<button class="btn btn-light" data-bs-toggle="modal"
-												data-bs-target="#exampleModal1 ">취소</button>
+												<button class="btn btn-light"><a th:href="@{codeGroupXdmList}" th:text="뒤로"></a></button>
+
 												<button class="btn btn-success submit" data-bs-toggle="modal"
 												data-bs-target="#exampleModal2 ">데이터추가</button>
 											
