--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout4.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout4.html
@@ -15,7 +15,7 @@
 		<meta property="og:description" content="Marketplace for Bootstrap Admin Dashboards">
 		<meta property="og:type" content="Website">
 		<meta property="og:site_name" content="Bootstrap Gallery">
-		<link rel="shortcut icon" href="assets/images/favicon.svg">
+		<link rel="shortcut icon" href="ddm/templates/max/design/assets/images/favicon.svg">
 
 		<!-- Title -->
 		<title>Best Admin Dashboards</title>
@@ -25,13 +25,13 @@
 		************ -->
 
 		<!-- Animated css -->
-		<link rel="stylesheet" href="assets/css/animate.css">
+		<link rel="stylesheet" href="ddm/templates/max/design/assets/css/animate.css">
 
 		<!-- Bootstrap font icons css -->
-		<link rel="stylesheet" href="assets/fonts/bootstrap/bootstrap-icons.css">
+		<link rel="stylesheet" href="ddm/templates/max/design/assets/fonts/bootstrap/bootstrap-icons.css">
 
 		<!-- Main css -->
-		<link rel="stylesheet" href="assets/css/main.min.css">
+		<link rel="stylesheet" href="ddm/templates/max/design/assets/css/main.min.css">
 
 
 		<!-- *************
@@ -39,25 +39,11 @@
 		************ -->
 
 		<!-- Scrollbar CSS -->
-		<link rel="stylesheet" href="assets/vendor/overlay-scroll/OverlayScrollbars.min.css">
+		<link rel="stylesheet" href="ddm/templates/max/design/assets/vendor/overlay-scroll/OverlayScrollbars.min.css">
 
 	</head>
 
 	<body>
-
-		<!-- Loading wrapper start -->
-		<!-- <div id="loading-wrapper">
-			<div class="spinner">
-                <div class="line1"></div>
-				<div class="line2"></div>
-				<div class="line3"></div>
-				<div class="line4"></div>
-				<div class="line5"></div>
-				<div class="line6"></div>
-            </div>
-		</div> -->
-		<!-- Loading wrapper end -->
-
 		<!-- Page wrapper start -->
 		<div class="page-wrapper">
 
@@ -285,7 +271,7 @@
 											<a href="summernote.html">Summernote</a>
 										</li>
 										<li>
-											<a href="form-layout1.html">Form Layout</a>
+											<a href="form-layout1.html" class="current-page">Form Layout</a>
 										</li>
 										<li>
 											<a href="form-layout2.html">Form Layout 2</a>
@@ -294,7 +280,7 @@
 											<a href="form-layout3.html">Form Layout 3</a>
 										</li>
 										<li>
-											<a href="form-layout4.html" class="current-page">Form Layout Horizontal</a>
+											<a href="form-layout4.html">Form Layout Horizontal</a>
 										</li>
 										<li>
 											<a href="form-layout5.html">Form Layout Tabs</a>
@@ -449,7 +435,7 @@
 								<div class="dropdown-menu dropdown-menu-end shadow">
 									<div class="dropdown-item">
 										<div class="d-flex py-2 border-bottom">
-											<img src="assets/images/user.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
+											<img src="ddm/templates/max/design/assets/images/user.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
 											<div class="m-0">
 												<h6 class="mb-1">Sophie Michiels</h6>
 												<p class="mb-2">Membership has been ended.</p>
@@ -459,7 +445,7 @@
 									</div>
 									<div class="dropdown-item">
 										<div class="d-flex py-2 border-bottom">
-											<img src="assets/images/user2.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
+											<img src="ddm/templates/max/design/assets/images/user2.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
 											<div class="m-0">
 												<h6 class="mb-1">Sophie Michiels</h6>
 												<p class="mb-2">Congratulate, James for new job.</p>
@@ -469,7 +455,7 @@
 									</div>
 									<div class="dropdown-item">
 										<div class="d-flex py-2">
-											<img src="assets/images/user3.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
+											<img src="ddm/templates/max/design/assets/images/user3.png" class="img-4x me-3 rounded-3" alt="Admin Theme" />
 											<div class="m-0">
 												<h6 class="mb-1">Sophie Michiels</h6>
 												<p class="mb-2">Lewis added new schedule release.</p>
@@ -483,24 +469,24 @@
 
 							<li class="dropdown d-none d-md-block">
 								<a href="#" id="countries" data-toggle="dropdown" aria-haspopup="true">
-									<img src="assets/images/flags/1x1/gb.svg" class="flag-img" alt="AI Admin Dashboards" />
+									<img src="ddm/templates/max/design/assets/images/flags/1x1/gb.svg" class="flag-img" alt="AI Admin Dashboards" />
 								</a>
 								<div class="dropdown-menu dropdown-menu-end mini" aria-labelledby="countries">
 									<div class="country-container">
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/us.svg" alt="Clean Admin Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/us.svg" alt="Clean Admin Dashboards" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/in.svg" alt="Google Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/in.svg" alt="Google Dashboards" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/br.svg" alt="Admin Panels" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/br.svg" alt="Admin Panels" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/tr.svg" alt="Modern Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/tr.svg" alt="Modern Dashboards" />
 										</a>
 										<a href="index.html">
-											<img src="assets/images/flags/1x1/ca.svg" alt="Best Admin Dashboards" />
+											<img src="ddm/templates/max/design/assets/images/flags/1x1/ca.svg" alt="Best Admin Dashboards" />
 										</a>
 									</div>
 								</div>
@@ -509,7 +495,7 @@
 								<a href="#" id="userSettings" class="user-settings" data-toggle="dropdown" aria-haspopup="true">
 									<span class="user-name d-none d-md-block">Tony Robbins</span>
 									<span class="avatar">
-										<img src="assets/images/user3.png" alt="Admin Templates">
+										<img src="ddm/templates/max/design/assets/images/user3.png" alt="Admin Templates">
 										<span class="status busy"></span>
 									</span>
 								</a>
@@ -543,150 +529,39 @@
 								<!-- Card start -->
 								<div class="card">
 									<div class="card-header">
-										<div class="card-title">Horizontal Form Layout</div>
+										<div class="card-title">Form Layout</div>
 									</div>
 									<div class="card-body">
+										<form action = "codeGroupDelete" method="post">
 
 										<!-- Row start -->
-										<form>
-											<div class="row mb-3">
-												<label class="col-sm-2 col-form-label">Full Name</label>
-												<div class="col-sm-3">
-													<input type="text" class="form-control" placeholder="First Name">
-												</div>
-												<div class="col-sm-3">
-													<input type="text" class="form-control" placeholder="Last Name">
-												</div>
-											</div>
-											<div class="row mb-3">
-												<label class="col-sm-2 col-form-label">Email Address</label>
-												<div class="col-sm-3">
-													<input type="email" class="form-control">
+										<div class="row gx-3">
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationCustom01" class="form-label">seq</label>
+													<input type="text" class="form-control" id="validationCustom01" 
+													th:value="${item.seq}" required=""
+													name = "seq">
 												</div>
 											</div>
-											<div class="row mb-3">
-												<label class="col-sm-2 col-form-label">Location</label>
-												<div class="col-sm-3">
-													<div class="input-group">
-														<input class="form-control" type="text" placeholder="Street Address">
-														<span class="input-group-text">
-															<i class="bi bi-pin-map"></i>
-														</span>
-													</div>
-												</div>
-												<div class="col-sm-3">
-													<div class="input-group">
-														<input class="form-control" type="text" placeholder="City">
-														<span class="input-group-text">
-															<i class="bi bi-map"></i>
-														</span>
-													</div>
-												</div>
-												<div class="col-sm-3">
-													<div class="input-group">
-														<input class="form-control" type="text" placeholder="Pin">
-														<span class="input-group-text">
-															<i class="bi bi-pencil"></i>
-														</span>
-													</div>
+											<div class="col-sm-6 col-12">
+												<div class="was-validated">
+													<label for="validationCustom01" class="form-label">name</label>
+													<input type="text" class="form-control" id="validationCustom01" th:value="${item.name}" required=""
+													name = "name" >
 												</div>
 											</div>
-											<fieldset class="row mb-3">
-												<label class="col-sm-2 col-form-label">Billing Interval</label>
-												<div class="col-sm-3">
-													<div class="form-check">
-														<input class="form-check-input" type="radio" name="gridRadios" id="billingRadio1"
-															value="option1" checked="">
-														<label class="form-check-label" for="billingRadio1">
-															Monthly
-														</label>
-													</div>
-													<div class="form-check">
-														<input class="form-check-input" type="radio" name="billingRadio" id="billingRadio2"
-															value="option2">
-														<label class="form-check-label" for="billingRadio2">
-															Quarterly
-														</label>
-													</div>
-													<div class="form-check disabled">
-														<input class="form-check-input" type="radio" name="billingRadio" id="billingRadio3"
-															value="option3">
-														<label class="form-check-label" for="billingRadio3">
-															Yearly
-														</label>
-													</div>
-												</div>
-											</fieldset>
-											<div class="row mb-3">
-												<div class="col-sm-10 offset-sm-2">
-													<div class="form-check">
-														<input class="form-check-input" type="checkbox">
-														<label class="form-check-label">
-															Email Subscription
-														</label>
-													</div>
-												</div>
-											</div>
-										</form>
-										<!-- Row end -->
-
+											
+										</div>
 										<!-- Form actions footer start -->
 										<div class="form-actions-footer">
-											<button class="btn btn-light">Cancel</button>
-											<button class="btn btn-success">Submit</button>
+												<button class="btn btn-light"><a th:href="@{codeGroupXdmList}" th:text="뒤로"></a></button>
+												
+												<button class="btn btn-success submit" data-bs-toggle="modal"
+												data-bs-target="#exampleModal2 ">데이터 수정</button>
+											
 										</div>
 										<!-- Form actions footer end -->
-
-									</div>
-								</div>
-								<!-- Card end -->
-
-							</div>
-
-						</div>
-						<!-- Row end -->
-
-						<!-- Row start -->
-						<div class="row gx-3">
-							<div class="col-sm-12 col-12">
-
-								<!-- Card start -->
-								<div class="card">
-									<div class="card-body">
-
-										<form class="row row-cols-lg-auto g-3 align-items-center">
-											<div class="col-12">
-												<label class="visually-hidden">Username</label>
-												<div class="input-group">
-													<div class="input-group-text">
-														<i class="bi bi-person"></i>
-													</div>
-													<input type="text" class="form-control" placeholder="Username">
-												</div>
-											</div>
-
-											<div class="col-12">
-												<label class="visually-hidden">Password</label>
-												<div class="input-group">
-													<div class="input-group-text">
-														<i class="bi bi-eye-slash"></i>
-													</div>
-													<input type="password" class="form-control" placeholder="Password">
-												</div>
-											</div>
-
-											<div class="col-12">
-												<div class="form-check">
-													<input class="form-check-input" type="checkbox">
-													<label class="form-check-label">
-														Remember me
-													</label>
-												</div>
-											</div>
-
-											<div class="col-12">
-												<button type="submit" class="btn btn-success">Submit</button>
-											</div>
 										</form>
 
 									</div>
@@ -694,6 +569,7 @@
 								<!-- Card end -->
 
 							</div>
+
 						</div>
 						<!-- Row end -->
 
@@ -721,21 +597,21 @@
 			************ Required JavaScript Files *************
 		************* -->
 		<!-- Required jQuery first, then Bootstrap Bundle JS -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/bootstrap.bundle.min.js"></script>
-		<script src="assets/js/modernizr.js"></script>
-		<script src="assets/js/moment.js"></script>
+		<script src="ddm/templates/max/design/assets/js/jquery.min.js"></script>
+		<script src="ddm/templates/max/design/assets/js/bootstrap.bundle.min.js"></script>
+		<script src="ddm/templates/max/design/assets/js/modernizr.js"></script>
+		<script src="ddm/templates/max/design/assets/js/moment.js"></script>
 
 		<!-- *************
 			************ Vendor Js Files *************
 		************* -->
 
 		<!-- Overlay Scroll JS -->
-		<script src="assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
-		<script src="assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
+		<script src="ddm/templates/max/design/assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
+		<script src="ddm/templates/max/design/assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
 
 		<!-- Main Js Required -->
-		<script src="assets/js/main.js"></script>
+		<script src="ddm/templates/max/design/assets/js/main.js"></script>
 
 	</body>
 
