--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables.html
@@ -61,7 +61,7 @@
 			
 		</script>
 
-		<script type="text/javascript">
+<!--		<script type="text/javascript">
 			$(function(){
 				var chkObj = document.getElementsByName("RowCheck");
 				var rowCnt = chkObj.length;
@@ -143,7 +143,7 @@
 				}
 				
 		    }
-		</script>
+		</script>-->
 	</head>
 
 	<body>
@@ -770,11 +770,11 @@
 													<th>seq</th>
 													<th>코드name</th>
 													<th>delYn</th>
-													<th>seq</th>
-													<th>코드name</th>
-													<th>seq</th>
-													<th>delyn</th>
-													<th>코드name</th>
+													<th>insertDate</th>
+													<th>deleteDate</th>
+<!--													<th>seq</th>-->
+<!--													<th>delyn</th>-->
+<!--													<th>코드name</th>-->
 												</tr>
 											</thead>
 											<tbody>
@@ -783,24 +783,24 @@
 													<th><input type='checkbox'
 														name='RowCheck' 
 														th:value='${list.seq}'/></th>
-													<td th:text="${list.seq}"></td>
+													<td th:text="${list.seq}">
+<!--														<a th:href="@{/codeGroupDelForm(seq=${list.seq},name=${list.name})}" th:text="${list.seq}"></a>-->
+													</td>
 													<td>
 														<a th:href="@{/codeGroupForm(seq=${list.seq},name=${list.name})}" th:text="${list.name}"></a>
 													</td>
-													<td>
-														<a th:href="@{/codeGroupUpdtDel(seq=${list.seq},name=${list.name})}" th:text="${list.delYn}"></a>
+													<td th:if="${list.delYn eq 1}">N</td>
+    												<td th:unless="${list.delYn eq 1}">Y</td>
+<!--													<td><fmt:formatDate value ="${list.seq}" pattern ="yyyy/mm/dd"></td>-->
+													<td th:text="${list.insertDate}"></td>
+													<td th:text="${list.deleteDate}"></td>
+<!--												<td th:text="${list.seq}">
+<!--														<a th:href="@{/codeGroupDelForm(seq=${list.seq},name=${list.name})}" th:text="${list.seq}"></a>-->
 													</td>
-													<td><fmt:formatDate value ="${list.seq}" pattern ="yyyy/mm/dd"></td>
-													<td th:text="${list.name}"></td>
-													<td th:text="${list.delYn}"></td>
-													<td th:text="${list.seq}"></td>
-													<td th:text="${list.name}"></td>
-<!--													<td th:text="${list.insertDate}"></td>-->
-<!--													<td th:text="${list.deleteDate}"></td>-->
-<!--													<td th:text="${list.delYn}"></td>-->
-<!--													<td th:text="${list.seq}">250</td>-->
-<!--													<td th:text="${list.seq}">$4500</td>-->
-<!--													<td th:text="${list.seq}">10/10/2019 4:30pm</td>-->
+<!--													<td th:text="${list.seq}"></td>-->
+<!--													<td th:if="${list.delYn eq 1}">N</td>-->
+<!--    												<td th:unless="${list.delYn eq 1}">Y</td>-->
+<!--    												<td th:text="${list.name}"></td>-->
 												</tr>
 												</c:forEach>
 											</tbody>
@@ -826,7 +826,8 @@
 							</div>
 								<div class = "row">
 									<div class = "col-sm-1">
-										<button type="button" class="btn btn-danger" onclick="deleteValue();" th:text="삭제"></a>
+<!--										<button type="button" class="btn btn-danger" onclick="deleteValue();" th:text="삭제"></a>-->
+										<button type="button" class="btn btn-danger"><a th:href="@{codeGroupDelForm}" th:text="삭제"></a>
 											
 										</button>
 									</div>
