--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout1.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout1.html
@@ -535,7 +535,7 @@
 											<form action = "codeGroupInsert" method="post">
 
 										<!-- Row start -->
-										<div class="row gx-3">
+										<div class="row gx-3" style="margin-bottom: 30px;">
 											<div class="col-sm-6 col-12">
 												<div class="was-validated">
 													<label for="validationCustom01" class="form-label">seq</label>
@@ -552,82 +552,7 @@
 											</div>
 											
 										</div>
-										<!--<div class = "row gx-3">
-											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">전화번호</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required="">
-												</div>
-											</div>
-											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-
-													<label for="validationCustom03" class="form-label">성별</label>
-													<select class="form-select" id="validationCustom04" required="">
-														<option selected="" disabled="" value="">Choose...</option>
-														<option>남자</option>
-														<option>여자</option>
-														<option>그외</option>
-													</select>
-													<div class="invalid-feedback">Please select a valid state.</div>
-												
-
-											</div>
-										</div>
-										<div class = "row gx-3">
-											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom03" class="form-label">나라</label>
-													<select class="form-select" id="validationCustom04" required="">
-														<option selected="" disabled="" value="">Choose...</option>
-														<option>대한민국</option>
-														<option>일본</option>
-														<option>미국</option>
-													</select>
-													<div class="invalid-feedback">Please select a valid state.</div>
-												
-												</div>
-											</div>
-											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">Province/Territory</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required="">
-
-												</div>
-											</div>
-										</div>
-										<div class = "row gx-3">
-											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom03" class="form-label">Industry Type</label>
-													<select class="form-select" id="validationCustom04" required="">
-														<option selected="" disabled="" value="">Choose...</option>
-														<option>...</option>
-													</select>
-													<div class="invalid-feedback">Please select a valid state.</div>
-												</div>
-											</div>
-											<div class="col-xl- col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">Postal Code</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required="">
-												</div>
-											</div>
-											
-										</div>	
-											
-										</div>
-										<div>
-											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationTextarea" class="form-label">Message</label>
-													<textarea class="form-control is-invalid" id="validationTextarea"
-												placeholder="Required example textarea" required=""></textarea>
-												</div>
-											</div>
-										</div>
-										 Row end 
--->
+										
 										<!-- Form actions footer start -->
 										<div class="form-actions-footer">
 												<button class="btn btn-light"><a th:href="@{codeGroupXdmList}" th:text="뒤로"></a></button>
