--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout2.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout2.html
@@ -535,26 +535,22 @@
 										<form action = "codeGroupUpdt" method="post">
 
 										<!-- Row start -->
-										<div class="row gx-3">
+										<div class="row gx-3" style="margin-bottom: 30px;">
 											<div class="col-sm-6 col-12">
-												<div class="was-validated">
 													<label for="validationCustom01" class="form-label">seq</label>
-													<input type="text" class="form-control" id="validationCustom01" 
+													<input type="text" class="form-control"
 													th:value="${item.seq}" required=""
 													name = "seq">
-												</div>
 											</div>
 											<div class="col-sm-6 col-12">
-												<div class="was-validated">
 													<label for="validationCustom01" class="form-label">name</label>
-													<input type="text" class="form-control" id="validationCustom01" th:value="${item.name}" required=""
+													<input type="text" class="form-control" th:value="${item.name}" required=""
 													name = "name" >
-												</div>
 											</div>
 											
 										</div>
 										<!-- Form actions footer start -->
-										<div class="form-actions-footer">
+										<div class="form-actions-footer" >
 											<div class="col gy-2">
 												<button class="btn btn-light"><a th:href="@{codeGroupXdmList}" th:text="뒤로"></a></button>
 											</div>
